# qpoases-python

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: example1.py
modules/_qpoases/: __init__.py
modules/qpoases/: __init__.py  bounds.py  constraints.py  problem.py  qproblemb.py  sqproblem.py  types.py
src/: CMakeLists.txt  Wrapper.cpp
